config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  replicas: 1
  template:
    metadata:
      name: api-server
    spec:
      containers:
        - name: api-server
          image: challenging:0.0.1
          ports:
            - containerPort: 8080
