config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  ports:
    - name: svc-port
      port: 8080
      targetPort: 8080
  type: ClusterIP
